--- a/app/src/main/res/layout/fragment_agent_me.xml
+++ b/app/src/main/res/layout/fragment_agent_me.xml
@@ -130,6 +130,7 @@
                 app:layout_constraintTop_toTopOf="@+id/textView9" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -139,6 +140,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
