--- a/app/src/main/res/layout/fragment_client_home.xml
+++ b/app/src/main/res/layout/fragment_client_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/topCardAgent"
+            android:id="@+id/topCardAgents"
             app:cardCornerRadius="16sp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="32dp"
@@ -55,7 +55,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/topCardAgent">
+            app:layout_constraintTop_toBottomOf="@id/topCardAgents">
 
 
             <TextView
